# stacks

./: .gitignore  README.md  pyproject.toml
scripts/: eval_stacks.py
src/stacks/: chunker.py  cli.py  embeddings.py  generator.py  index.py  ingest.py  retriever.py
tests/: conftest.py  test_chunker.py  test_embeddings.py  test_generator.py  test_index.py  test_ingest.py
