[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacks"
version = "0.1.0"
description = "On-device semantic search over your own files -- ask your Mac a question, get a grounded, cited answer, nothing leaves the machine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Rajan Sharma" }]
dependencies = [
    "langchain-apple-foundation-models",
    "pyobjc-framework-NaturalLanguage",
    "pyobjc-framework-Cocoa",
    "pdfplumber>=0.10.0",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "reportlab>=4.0"]

[project.scripts]
stacks = "stacks.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stacks"]
